# alexandria

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  Dockerfile.backend  pyproject.toml
backend/app/: controllers.py  database.py  diff_engine.py  main.py  models.py  repository.py  schemas.py
backend/database/: lineage.db
cli/: Dockerfile  __init__.py  base.py  main.py  pyproject.toml
cli/commands/: artifacts.py  datasets.py  diff.py  log.py  show.py
cli/utils/: __init__.py
cli/utils/commands/: artifacts.py  datasets.py  diff.py
docs/: architecture.md  db_schema.md
examples/: test_tracker.py
frontend/: api.py  main.py  pyproject.toml
frontend/components/: diff_table.py  run_card.py
frontend/utils/: rich_helpers.py
frontend/views/: base_view.py  datasets_view.py  diff_view.py  run_detail_view.py  runs_view.py
tracker/: __init__.py  client.py  code_profiler.py  data_profiler.py  decorators.py  env_profiler.py  logger.py  model_saver.py  schemas.py
