[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alexandria-backend"
version = "0.1.0"
description = "Alexandria Backend"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.121.2",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.44",
    "pydantic==2.12.4",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["app"]
