[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alexandria-cli"
version = "0.1.0"
description = "Alexandria CLI"
requires-python = ">=3.10"

dependencies = [
    "typer[all]==0.20.0",
    "rich>=14.2.0",
    "httpx==0.28.1",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "datasets>=4.4.1",
]

[project.scripts]
alexandria = "cli.main:main"
